[package]
name = "tomato"
version = "0.1.0"
edition = "2021"

[dependencies]
wirefilter-engine = { git = "https://github.com/cloudflare/wirefilter", branch = "cloudflare" }
tokio = { version = "1.24", features = ["full"] }
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
lazy_static = "1.4"
